--- a/facebookdangnhaphoacdangky.html/index.html
+++ b/facebookdangnhaphoacdangky.html/index.html
@@ -741,11 +741,11 @@
         <div class="details">
             <div class="item">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y8/r/4r5pN3v2aN5.png" alt="Page" class="icon">
-                <span><strong>Trang</strong> • Studio chụp ảnh</span>
+                <span><strong>Trang cá nhân</strong>🅘 • Nhiếp ảnh gia</span>
             </div>
             <div class="item">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/5hM-k1AN4eS.png" alt="Location" class="icon">
-                <span><strong>424 Nguyễn Trãi, 286/1B Trần Hưng Đạo, P. Nguyễn Cư Trinh, Q1, Hồ Chí Minh</strong></span>
+                <span><strong>Sống tại</strong>Hà Nội</span>
             </div>
             <div class="item">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/6zYk4cJJeL8.png" alt="Email" class="icon">
@@ -753,7 +753,7 @@
             </div>
             <div class="item">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yb/r/5uH7TXzWENM.png" alt="Website" class="icon">
-                <span><strong><a href="https://www.tiktok.com/@meimeimodel_vision">tiktok.com/@meimeimodel_vision</a></strong></span>
+                <span><strong><a href="https://www.tiktok.com/@meimeimodel_vision"></strong></span>
             </div>
             <div class="item">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yU/r/u7v2q0v-KuV.png" alt="Hours" class="icon">
