--- a/facebookdangnhaphoacdangky.html/index.html
+++ b/facebookdangnhaphoacdangky.html/index.html
@@ -707,9 +707,9 @@
                 <div class="name">
                     Meimei Studio <span class="verified"></span>
                 </div>
-                <div class="stats">893k lượt thích • 648k người theo dõi</div>
+                <div class="stats"> 𝟴𝟵𝟯𝗸 𝗹𝘂̛𝗼̛̣𝘁 𝘁𝗵𝗶́𝗰𝗵   •   𝟲𝟰𝟴𝗸 𝗻𝗴𝘂̛𝗼̛̀𝗶 𝘁𝗵𝗲𝗼 𝗱𝗼̃𝗶 </div>
                 <div class="description">
-                    Lưu giữ vẻ đẹp của bạn
+                  𝘾𝙪𝒐̣̂𝙘 𝙎𝒐̂́𝙣𝙜 𝙇𝒂̀ 𝘽𝒖̛́𝙘 𝙏𝙧𝙖𝙣𝙝, 𝙈𝒐̂̃𝙞 𝙉𝙜𝒂̀𝙮 𝙇𝒂̀ 𝙈𝒐̣̂𝙩 𝙉𝒆́𝙩 𝙑𝒆̃ 𝙈𝒐̛́𝙞.
                 </div>
             </div>
         </div>
@@ -722,7 +722,7 @@
             <button class="like" onclick="showLoginPopup()">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/1FDa2tDB3Pp.png" alt="Like"> Thích
             </button>
-            <button class="more" onclick="alert('Mở menu tùy chọn (chức năng demo)')">
+            <button class="more" onclick="showLoginPopup()">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y_/r/6YvXqYx61Kr.png" alt="More">
             </button>
         </div>
@@ -741,27 +741,14 @@
         <div class="details">
             <div class="item">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y8/r/4r5pN3v2aN5.png" alt="Page" class="icon">
-                <span><strong>Trang cá nhân</strong>🅘 • Nhiếp ảnh gia</span>
+                <span><strong>𝗧𝗿𝗮𝗻𝗴 𝗰𝗮́ 𝗻𝗵𝗮̂𝗻 </strong> 🅘 • Nhiếp ảnh gia</span>
             </div>
             <div class="item">
                 <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/5hM-k1AN4eS.png" alt="Location" class="icon">
-                <span><strong>Sống tại</strong>Hà Nội</span>
-            </div>
-            <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/6zYk4cJJeL8.png" alt="Email" class="icon">
-                <span><strong>contact@meimeistudio.vn</strong></span>
-            </div>
-            <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yb/r/5uH7TXzWENM.png" alt="Website" class="icon">
-                <span><strong><a href="https://www.tiktok.com/@meimeimodel_vision"></strong></span>
-            </div>
-            <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yU/r/u7v2q0v-KuV.png" alt="Hours" class="icon">
-                <span><strong>Lưu mở cửa</strong></span>
+                <span><strong>Sống tại</strong> 𝗛𝗮̀ 𝗡𝗼̣̂𝗶 </span>
             </div>
         </div>
-
-        <!-- Main Content -->
+  <!-- Main Content -->
         <div class="main-content">
             <div class="sidebar">
                 <div id="photos-tab" class="photos-section tab-content">
